--- a/mpFormats_2010/EditUserSurnames.xaml
+++ b/mpFormats_2010/EditUserSurnames.xaml
@@ -21,12 +21,13 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/ModPlusAPI;component/Windows/WinResources/Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-            <Canvas x:Key="mp_add" Width="76" Height="76" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
+            <Canvas x:Key="MpAdd" Width="76" Height="76" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
                 <Path Width="38" Height="38" Canvas.Left="19" Canvas.Top="19" Stretch="Fill" Fill="Black" Data="F1 M 35,19L 41,19L 41,35L 57,35L 57,41L 41,41L 41,57L 35,57L 35,41L 19,41L 19,35L 35,35L 35,19 Z "/>
             </Canvas>
-            <Canvas x:Key="mp_close" Width="76" Height="76" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
+            <Canvas x:Key="MpClose" Width="76" Height="76" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
                 <Path Width="31.6666" Height="31.6667" Canvas.Left="22.1666" Canvas.Top="22.1667" Stretch="Fill" Fill="Black" Data="F1 M 26.9166,22.1667L 37.9999,33.25L 49.0832,22.1668L 53.8332,26.9168L 42.7499,38L 53.8332,49.0834L 49.0833,53.8334L 37.9999,42.75L 26.9166,53.8334L 22.1666,49.0833L 33.25,38L 22.1667,26.9167L 26.9166,22.1667 Z "/>
             </Canvas>
+            <XmlDataProvider x:Key="Lang" Source="E:/ModPlus/Languages/en-US.xml" XPath="ModPlus/mpFormats"></XmlDataProvider>
         </ResourceDictionary>
     </Window.Resources>
     <Grid Margin="5">
@@ -34,7 +35,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <Label FontSize="16" Grid.Row="0">ДОЛЖНОСТИ</Label>
+        <TextBlock FontSize="16" Grid.Row="0" Margin="0,0,20,5" Text="{Binding Source={StaticResource Lang}, XPath=h48}"></TextBlock>
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -60,7 +61,7 @@
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <DataGridTemplateColumn Header="Должность" Width="*">
+                    <DataGridTemplateColumn Header="{Binding Source={StaticResource Lang}, XPath=h49}" Width="*">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBox Text="{Binding Path=Attribute[Surname].Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
@@ -71,26 +72,24 @@
             </DataGrid>
             <!--Кнопки управления-->
             <Button VerticalAlignment="Center" Margin="2" Name="BtAddSurname"
-            Grid.Column="1" Grid.Row="0" Padding="5"
-            ToolTip="Добавить новую фамилию"
-            Click="BtAddSurname_OnClick"
-            >
+                    Grid.Column="1" Grid.Row="0" Padding="5"
+                    ToolTip="{Binding Source={StaticResource Lang}, XPath=h50}"
+                    Click="BtAddSurname_OnClick">
                 <Rectangle Width="20" Height="20" Fill="{DynamicResource AccentColorBrush}">
                     <Rectangle.OpacityMask>
                         <VisualBrush Stretch="Uniform"
-                             Visual="{StaticResource mp_add}"></VisualBrush>
+                             Visual="{StaticResource MpAdd}"></VisualBrush>
                     </Rectangle.OpacityMask>
                 </Rectangle>
             </Button>
             <Button VerticalAlignment="Top" Margin="2" Name="BtRemoveSurname"
                 Grid.Column="1" Grid.Row="1"  IsEnabled="False" Padding="5"
-                ToolTip="Удалить выбранную фамилию"
-                Click="BtRemoveSurname_OnClick"
-                >
+                ToolTip="{Binding Source={StaticResource Lang}, XPath=h51}"
+                Click="BtRemoveSurname_OnClick">
                 <Rectangle Width="20" Height="20" Fill="{DynamicResource AccentColorBrush}">
                     <Rectangle.OpacityMask>
                         <VisualBrush Stretch="Uniform"
-                             Visual="{StaticResource mp_close}"></VisualBrush>
+                             Visual="{StaticResource MpClose}"></VisualBrush>
                     </Rectangle.OpacityMask>
                 </Rectangle>
             </Button>
