--- a/mpFormats_2010/LayoutName.xaml
+++ b/mpFormats_2010/LayoutName.xaml
@@ -1,73 +1,60 @@
-﻿<controls:MetroWindow x:Class="mpFormats.LayoutName"
+﻿<mpc:BaseMetroWindow x:Class="mpFormats.LayoutName"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+                      xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
                       PreviewKeyDown="Window_PreviewKeyDown" mc:Ignorable="d" 
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                      SizeToContent="WidthAndHeight" ShowTitleBar="False"
-                      ShowMaxRestoreButton="False" ShowMinButton="False" 
-                      WindowStartupLocation="CenterScreen"
-                      ResizeMode="NoResize">
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:mpc="clr-namespace:ModPlusAPI.Windows.Mpc;assembly=ModPlusAPI"
+                      SizeToContent="WidthAndHeight" ResizeMode="NoResize">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedSingleRowTabControl.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml"/>
+                <!-- For IntelliSense -->
                 <ResourceDictionary Source="pack://application:,,,/ModPlusAPI;component/Windows/WinResources/Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <XmlDataProvider x:Key="Lang" Source="E:/ModPlus/Languages/en-US.xml" XPath="ModPlus/mpFormats"></XmlDataProvider>
         </ResourceDictionary>
     </Window.Resources>
-    <Grid Margin="5">
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <TextBlock FontSize="16" Grid.Row="0" Margin="0,0,20,5" Text="{Binding Source={StaticResource Lang}, XPath=h42}"></TextBlock>
-        <Grid Grid.Row="1">
+        <TextBox Name="TbLayoutName" Margin="2" Grid.Row="0" VerticalAlignment="Center"
+                     Width="200" mah:TextBoxHelper.ClearTextButton="True"></TextBox>
+        <Grid Grid.Row="1" Name="GridAddToStamp">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
-            <TextBox Name="TbLayoutName" Margin="2" Grid.Row="0" VerticalAlignment="Center"
-                     Width="200" controls:TextBoxHelper.ClearTextButton="True"></TextBox>
-            <Grid Grid.Row="1" Name="GridAddToStamp">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                    <ColumnDefinition Width="Auto"></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="2" 
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="2" 
                            Text="{Binding Source={StaticResource Lang}, XPath=h43}"></TextBlock>
-                <CheckBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,2,2,2" 
+            <CheckBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,2,2,2" 
                           Content="{Binding Source={StaticResource Lang}, XPath=h44}"
                           Name="ChkAddNameToStamp"></CheckBox>
-                <CheckBox Grid.Row="2" Grid.Column="0" Margin="10,2,2,2" 
+            <CheckBox Grid.Row="2" Grid.Column="0" Margin="10,2,2,2" 
                           Content="{Binding Source={StaticResource Lang}, XPath=h45}"
                           VerticalAlignment="Center" Name="ChkLNumber"
                           Checked="ChkLNumber_OnChecked" Unchecked="ChkLNumber_OnUnchecked"></CheckBox>
-                <TextBox Grid.Row="2" Grid.Column="1" Margin="2" VerticalAlignment="Center" Width="100" MaxLength="4"
+            <TextBox Grid.Row="2" Grid.Column="1" Margin="2" VerticalAlignment="Center" Width="100" MaxLength="4"
                          Name="TbLNumber" IsEnabled="False"></TextBox>
-                <CheckBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="2"
+            <CheckBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="2"
                           Name="ChkLayoutScaleOneToOne" Content="{Binding Source={StaticResource Lang}, XPath=h46}"
                           ToolTip="{Binding Source={StaticResource Lang}, XPath=h47}"
                           ToolTipService.ShowDuration="0"></CheckBox>
-            </Grid>
-            <Button Name="BtAccept" Margin="2" Grid.Row="2" VerticalAlignment="Center"
+        </Grid>
+        <Button Name="BtAccept" Margin="2" Grid.Row="2" VerticalAlignment="Center"
                     HorizontalAlignment="Center"
                     Click="BtAccept_OnClick"
                     Content="{Binding Source={StaticResource Lang}, XPath=accept}"></Button>
-        </Grid>
     </Grid>
-</controls:MetroWindow>
+</mpc:BaseMetroWindow>
+
