--- a/mpFormats_2013/LayoutName.xaml
+++ b/mpFormats_2013/LayoutName.xaml
@@ -1,19 +1,17 @@
-﻿<mpc:BaseMetroWindow x:Class="mpFormats.LayoutName"
+﻿<mps:ModPlusWindow x:Class="mpFormats.LayoutName"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-                      PreviewKeyDown="Window_PreviewKeyDown" mc:Ignorable="d" 
+                      mc:Ignorable="d" 
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                      xmlns:mpc="clr-namespace:ModPlusAPI.Windows.Mpc;assembly=ModPlusAPI"
+                      xmlns:mps="https://modplus.org/winfx/xaml/controls"
                       SizeToContent="WidthAndHeight" ResizeMode="NoResize">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <!-- For IntelliSense -->
-                <ResourceDictionary Source="pack://application:,,,/ModPlusAPI;component/Windows/WinResources/Styles.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/ModPlusStyle;component/Styles/Controls.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-            <XmlDataProvider x:Key="Lang" Source="E:/ModPlus/Languages/en-US.xml" XPath="ModPlus/mpFormats"></XmlDataProvider>
+            <XmlDataProvider x:Key="Lang" Source="E:/ModPlus/Languages/en-US.xml" XPath="ModPlus/mpFormats" IsAsynchronous="False"></XmlDataProvider>
         </ResourceDictionary>
     </Window.Resources>
     <Grid>
@@ -22,8 +20,8 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <TextBox Name="TbLayoutName" Margin="2" Grid.Row="0" VerticalAlignment="Center"
-                     Width="200" mah:TextBoxHelper.ClearTextButton="True"></TextBox>
+        <TextBox Name="TbLayoutName" Grid.Row="0" 
+                 Width="214" mps:TextFieldAssist.ClearTextButton="True"></TextBox>
         <Grid Grid.Row="1" Name="GridAddToStamp">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -35,26 +33,25 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="2" 
+            <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="{DynamicResource ModPlusDefaultMargin}" 
                            Text="{Binding Source={StaticResource Lang}, XPath=h43}"></TextBlock>
-            <CheckBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,2,2,2" 
+            <CheckBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,4,4,4" 
                           Content="{Binding Source={StaticResource Lang}, XPath=h44}"
                           Name="ChkAddNameToStamp"></CheckBox>
-            <CheckBox Grid.Row="2" Grid.Column="0" Margin="10,2,2,2" 
+            <CheckBox Grid.Row="2" Grid.Column="0" Margin="10,4,4,4" 
                           Content="{Binding Source={StaticResource Lang}, XPath=h45}"
                           VerticalAlignment="Center" Name="ChkLNumber"
                           Checked="ChkLNumber_OnChecked" Unchecked="ChkLNumber_OnUnchecked"></CheckBox>
-            <TextBox Grid.Row="2" Grid.Column="1" Margin="2" VerticalAlignment="Center" Width="100" MaxLength="4"
+            <TextBox Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Width="100" MaxLength="4"
                          Name="TbLNumber" IsEnabled="False"></TextBox>
-            <CheckBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="2"
-                          Name="ChkLayoutScaleOneToOne" Content="{Binding Source={StaticResource Lang}, XPath=h46}"
-                          ToolTip="{Binding Source={StaticResource Lang}, XPath=h47}"
-                          ToolTipService.ShowDuration="0"></CheckBox>
+            <CheckBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" 
+                      Name="ChkLayoutScaleOneToOne" Content="{Binding Source={StaticResource Lang}, XPath=h46}"
+                      ToolTip="{Binding Source={StaticResource Lang}, XPath=h47}"
+                      ToolTipService.ShowDuration="0"></CheckBox>
         </Grid>
-        <Button Name="BtAccept" Margin="2" Grid.Row="2" VerticalAlignment="Center"
-                    HorizontalAlignment="Center"
-                    Click="BtAccept_OnClick"
-                    Content="{Binding Source={StaticResource Lang}, XPath=accept}"></Button>
+        <Button Name="BtAccept" Grid.Row="2" 
+                Click="BtAccept_OnClick"
+                Content="{Binding Source={StaticResource Lang}, XPath=accept}"></Button>
     </Grid>
-</mpc:BaseMetroWindow>
+</mps:ModPlusWindow>
 
